Added some super basic command line arg parsing for dump_tree_mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(
   VERSION 1.0
   LANGUAGES CXX)
 
+# Use absolute paths for #includes
 SET(BASEPATH "${CMAKE_SOURCE_DIR}")
 INCLUDE_DIRECTORIES("${BASEPATH}")
 
