--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_subdirectory(atspi)
-add_subdirectory(mac)
+if(LINUX)
+  add_subdirectory(atspi)
+endif(LINUX)
+
+if(APPLE)
+  add_subdirectory(mac)
+endif(APPLE)
