--- a/lib/atspi/CMakeLists.txt
+++ b/lib/atspi/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_library(
   # Name
-  atspi
+  atspi_wrapper
 
   # Sources
-  atspi.cc
-  atspi.h
+  atspi_wrapper.cc
+  atspi_wrapper.h
 )
 
 add_executable(
@@ -15,10 +15,15 @@ add_executable(
   dump_tree_atspi.cc
 )
 
+# Find installed libatspi
+find_library(LIB_ATSPI libatspi.so.0)
 
 target_link_libraries(
   # Target to link (created above)
   dump_tree_atspi
 
   # Items to link into the target
-  PRIVATE atspi)
+  PRIVATE
+    atspi_wrapper
+    "${LIB_ATSPI}"
+)
