atspi interface file

--- a/lib/atspi/CMakeLists.txt
+++ b/lib/atspi/CMakeLists.txt
@@ -1,10 +1,14 @@
 add_library(
   # Name
-  atspi_wrapper
+  atspi_inspect
+
+  # This value needs to be the same as the SWIG_ADD_LIBRARY
+  # And I think we want a shared library for including in python's runtime
+  SHARED
 
   # Sources
-  atspi_wrapper.cc
-  atspi_wrapper.h
+  atspi_node.cc
+  atspi_node.h
   linux_utils.cc
   linux_utils.h
 )
@@ -25,7 +29,7 @@ pkg_check_modules(
 
 # With this, we can #include "atspi/atspi.h"
 target_include_directories(
-  atspi_wrapper
+  atspi_inspect
 
   PUBLIC
     ${ATSPI2_INCLUDE_DIRS}
@@ -33,7 +37,7 @@ target_include_directories(
 
 target_link_libraries(
   # Target to link (created above)
-  atspi_wrapper
+  atspi_inspect
 
   # Items to link into the target
   PRIVATE
@@ -54,5 +58,31 @@ target_link_libraries(
 
   # Items to link into the target
   PRIVATE
-    atspi_wrapper
+    atspi_inspect
 )
+
+# SWIG Instructions to build a python module called "atspi_inspect"
+
+FIND_PACKAGE(SWIG REQUIRED)
+INCLUDE(${SWIG_USE_FILE})
+
+FIND_PACKAGE(PythonLibs)
+INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+
+SET_SOURCE_FILES_PROPERTIES(atspi_inspect.i PROPERTIES CPLUSPLUS ON)
+
+SWIG_ADD_LIBRARY(
+  # The name of the c++ library used by python module
+  atspi_python_inspect
+  TYPE SHARED
+  LANGUAGE python
+  SOURCES atspi_inspect.i
+)
+
+TARGET_LINK_LIBRARIES(
+  atspi_python_inspect
+  atspi_inspect
+  ${PYTHON_LIBRARIES}
+)
+
