New strategy: call macOS code directly from C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.25)
 
+# Enable cmake_print_variables() and cmake_print_properties() for debugging
+include(CMakePrintHelpers)
+
 set(PROJECT_LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
