Convert axapi_node to objc, cry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include(CMakePrintHelpers)
 
 set(PROJECT_LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_OBJCXX_STANDARD 17)
 
 project(
     axaccess
