Apply suggestions from alice
Co-authored-by: Alice <95208+alice@users.noreply.github.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -21,7 +21,7 @@ generate_export_header(
 target_compile_definitions(
   axaccess
   PRIVATE
-    # preprocessor macro to specific we are building a binary .dll, in which
+    # preprocessor macro to specify we are building a binary .dll, in which
     # case all AXA_EXPORTS will result in a dllexport statement.
     axaccess_EXPORTS
 )
