Fix linking errors for linux

--- a/lib/atspi/CMakeLists.txt
+++ b/lib/atspi/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(
   linux_utils.cc
   axa_context_impl.cc
   axa_node_impl.cc
+  ../node.cc
+  ../context.cc
 )
 
 # CMake module that can find system c++ librarys
