Move public headers to build dir to mix with generated files
This adds a custom target that will copy headers from
source dir's `include/` to build dir's `include`. Then the
generated `export.h` file will be placed there.

The purpose is to keep public headers self-contained, so that
they don't reference any file in the build dir.

The install target will then just copy ${BUILD_DIR}/include to
whatever $PREFIX.

--- a/lib/atspi/CMakeLists.txt
+++ b/lib/atspi/CMakeLists.txt
@@ -33,7 +33,7 @@ target_include_directories(
   atspi_inspect
 
   PUBLIC
-    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_BINARY_DIR}/include
     ${ATSPI2_INCLUDE_DIRS}
 )
 
