--- a/lib/atspi/binding.gyp.in
+++ b/lib/atspi/binding.gyp.in
@@ -4,7 +4,7 @@
       "target_name": "atspi_inspect",
       "include_dirs": [
         "${CMAKE_CURRENT_SOURCE_DIR}",
-        "${CMAKE_SOURCE_DIR}/include",
+        "${CMAKE_BINARY_DIR}/include",
       ],
       "sources": [
         "../../../lib/atspi/linux_utils.cc",
