Move public headers to build dir to mix with generated files (#70)
* Move public headers to build dir to mix with generated files

This adds a custom target that will copy headers from
source dir's `include/` to build dir's `include`. Then the
generated `export.h` file will be placed there.

The purpose is to keep public headers self-contained, so that
they don't reference any file in the build dir.

The install target will then just copy ${BUILD_DIR}/include to
whatever $PREFIX.

* Use cross platform cmake copy command

Co-authored-by: Valerie Young <spectranaut@igalia.com>
Co-authored-by: Alice <95208+alice@users.noreply.github.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,20 @@
+# Public headers
+
+add_custom_target(
+  pub_headers
+  COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/include ${PROJECT_BINARY_DIR}/include
+  VERBATIM
+)
+
 # Main library (libaxaccess.so)
 add_library(
   axaccess
   SHARED
+)
+
+add_dependencies(
+  axaccess
+  pub_headers
 )
 
 set(
@@ -16,7 +29,7 @@ include(GenerateExportHeader)
 generate_export_header(
   axaccess
   BASE_NAME axa
-  EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/exports/axa_export.h
+  EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/include/axaccess/export.h
 )
 target_compile_definitions(
   axaccess
@@ -76,6 +89,5 @@ target_sources(
 target_include_directories(
   axaccess
   PUBLIC
-    ${PROJECT_SOURCE_DIR}/include
-    ${PROJECT_BINARY_DIR}/exports  # axa_export.h
+    ${PROJECT_BINARY_DIR}/include
 )
