Add IAccessible2 dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,13 @@ cmake_minimum_required(VERSION 3.25)
 # Enable cmake_print_variables() and cmake_print_properties() for debugging
 include(CMakePrintHelpers)
 
-set(PROJECT_LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_OBJCXX_STANDARD 17)
 
 project(
   axaccess
   VERSION 1.0
-  LANGUAGES ${PROJECT_LANGUAGES}
+  LANGUAGES C CXX
 )
 
 # Use absolute paths for #includes
