--- a/lib/ia2/CMakeLists.txt
+++ b/lib/ia2/CMakeLists.txt
@@ -1,4 +1,17 @@
 add_library(
+  iaccessible2
+  STATIC
+  ia2_api_all_i.c
+)
+
+target_include_directories(
+  iaccessible2
+
+  PUBLIC
+    ${PROJECT_BINARY_DIR}/include/axaccess/ia2
+)
+
+add_library(
   # Name
   ia2_inspect
   SHARED
@@ -15,6 +28,12 @@ target_include_directories(
     ${PROJECT_BINARY_DIR}/include
 )
 
+target_link_libraries(
+  ia2_inspect
+  oleacc
+  iaccessible2
+)
+
 target_compile_definitions(
   ia2_inspect
   PRIVATE
@@ -22,3 +41,4 @@ target_compile_definitions(
     # case all AXA_EXPORTS will result in a dllexport statement.
     axaccess_EXPORTS
 )
+
