[ATSPI] Add NodeJS version of the dump_tree example

--- a/examples/atspi/CMakeLists.txt
+++ b/examples/atspi/CMakeLists.txt
@@ -8,3 +8,15 @@ target_link_libraries(
   PRIVATE
     atspi_inspect
 )
+
+if (AXA_NODEJS_MODULE)
+  add_custom_target(
+    dump_tree_atspi.js
+    ALL
+    DEPENDS
+      atspi_inspect
+      atspi_inspect.node
+    COMMAND
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_atspi.js ${CMAKE_CURRENT_BINARY_DIR}/
+  )
+endif (AXA_NODEJS_MODULE)
