--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,77 +1,79 @@
-# Main library (libaxaccess.so)
-add_library(
-  axaccess
-  SHARED
-)
-
-set(
-  AXA_SOURCES
-  context.cc
-  node.cc
-)
-
-target_compile_definitions(
-  axaccess
-  PRIVATE
-    # preprocessor macro to specify we are building a binary .dll, in which
-    # case all AXA_EXPORTS will result in a dllexport statement.
-    axaccess_EXPORTS
-)
-
-# Feature flag for Python bindings, ON by default
-option(
-  AXA_PYTHON_MODULE
-  "Build Python bindings (requires swig and python3)"
-  ON
-)
-
-# Feature flag for NodeJS bindings, ON by default
-option(
-  AXA_NODEJS_MODULE
-  "Build NodeJS bindings (requires swig and node-gyp)"
-  ON
-)
-
-## Backends
-if(LINUX)
-  target_compile_definitions(
-    axaccess
-    PUBLIC -DAXA_API_ATSPI
-  )
+# Backends
+if (LINUX)
   add_subdirectory(atspi)
-  target_link_libraries(
-    axaccess
-    PRIVATE
-      atspi_inspect
-  )
-endif(LINUX)
+endif (LINUX)
 
-if(APPLE)
-  target_compile_definitions(
-    axaccess
-    PUBLIC -DAXA_API_AXAPI
-  )
-
+if (APPLE)
   add_subdirectory(mac)
-  target_link_libraries(
-    axaccess
-    PRIVATE
-      mac_inspect
-  )
-endif(APPLE)
+endif (APPLE)
 
 if(WIN32)
   add_subdirectory(ia2)
 endif(WIN32)
 
-target_sources(
-  axaccess
-  PRIVATE
-    ${AXA_SOURCES}
-)
 
-target_include_directories(
-  axaccess
-  PUBLIC
-    ${PROJECT_BINARY_DIR}/include
-)
+# Cross-platform API libaxaccess (experimental)
+if (AXA_LIBAXACCESS)
+  # Main library (libaxaccess.so)
+  add_library(
+    axaccess
+    SHARED
+  )
+
+  add_dependencies(
+    axaccess
+    pub_headers
+  )
+
+  set(
+    AXA_SOURCES
+    context.cc
+    node.cc
+  )
+
+  # Generate AXA_EXPORT and AXA_NO_EXPORT axa_exported.h necessary for
+  # including dllexport and dllimport statements in .dll source code.
+  include(GenerateExportHeader)
+  generate_export_header(
+    axaccess
+    BASE_NAME axa
+    EXPORT_FILE_NAME ${PROJECT_BINARY_DIR}/include/axaccess/export.h
+  )
+  target_compile_definitions(
+    axaccess
+    PRIVATE
+      # preprocessor macro to specify we are building a binary .dll, in which
+      # case all AXA_EXPORTS will result in a dllexport statement.
+      axaccess_EXPORTS
+  )
+
+  target_sources(
+    axaccess
+    PRIVATE
+      ${AXA_SOURCES}
+  )
+
+  if (LINUX)
+    target_compile_definitions(
+      axaccess
+      PUBLIC -DAXA_API_ATSPI
+    )
+    target_link_libraries(
+      axaccess
+      PRIVATE
+        atspi_inspect
+    )
+  endif (LINUX)
+
+  if (APPLE)
+    target_compile_definitions(
+      axaccess
+      PUBLIC -DAXA_API_AXAPI
+    )
+    target_link_libraries(
+      axaccess
+      PRIVATE
+        mac_inspect
+    )
+  endif (APPLE)
+endif (AXA_LIBAXACCESS)
