IA2 dump tree implementation (#75)
* Add IAccessible2 dependency
* Working IA2 dump
Temporarily only dumps Google Chrome.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,14 @@ cmake_minimum_required(VERSION 3.25)
 # Enable cmake_print_variables() and cmake_print_properties() for debugging
 include(CMakePrintHelpers)
 
-set(PROJECT_LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_OBJCXX_STANDARD 17)
+
+if(WIN32)
+  set(PROJECT_LANGUAGES CXX C)
+else()
+  set(PROJECT_LANGUAGES CXX)
+endif()
 
 project(
   axaccess
